--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,12 +1,12 @@
 <div class="auth-forms">
 
-  <h2>Register</h2>
+  <h2>Log In</h2>
 
-  <form ng-submit="register()">
+  <form ng-submit="login()">
     <p ng-show="error" class="text-danger">{{ error }}</p>
     <input type="email" ng-model="user.email" placeholder="Email" class="form-control"><br>
     <input type="password" ng-model="user.password" placeholder="Password" class="form-control"><br>
-    <input type="submit" value="Register" class="btn btn-primary" />
+    <input type="submit" value="Log in" class="btn btn-primary" />
   </form>
 
 </div>
