--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -21,9 +21,19 @@
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-right" ng-hide="signedIn()">
       <li>
         <a href="#/register">Register</a>
+      </li>
+      <li>
+        <a href="#/login">Log In</a>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right" ng-show="signedIn()">
+      <li>
+      </li>
+      <li>
+        <a href="#" ng-click="logout()">Logout</a>
       </li>
     </ul>
   </div><!-- /.navbar-collapse -->
