--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -21,19 +21,23 @@
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
+    <ul class="nav navbar-nav navbar-right" ng-show="signedIn()">
+      <li>
+        <a href="#/users/{{ currentUser.username }}">
+          <img ng-src="http://www.gravatar.com/avatar/{{ currentUser.md5_hash }}" class="nav-pic" />
+          {{ currentUser.username }}
+        </a>
+      </li>
+      <li>
+        <a href="#" ng-click="logout()">Logout</a>
+      </li>
+    </ul>
     <ul class="nav navbar-nav navbar-right" ng-hide="signedIn()">
       <li>
         <a href="#/register">Register</a>
       </li>
       <li>
         <a href="#/login">Log In</a>
-      </li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right" ng-show="signedIn()">
-      <li>
-      </li>
-      <li>
-        <a href="#" ng-click="logout()">Logout</a>
       </li>
     </ul>
   </div><!-- /.navbar-collapse -->
