--- a/app/views/register.html
+++ b/app/views/register.html
@@ -6,6 +6,7 @@
     <p ng-show="error" class="text-danger">{{ error }}</p>
     <input type="email" ng-model="user.email" placeholder="Email" class="form-control"><br>
     <input type="password" ng-model="user.password" placeholder="Password" class="form-control"><br>
+    <input type="text" ng-model="user.username" placeholder="Username" class="form-control"><br>
     <input type="submit" value="Register" class="btn btn-primary" />
   </form>
 
