added user model, chap 7

--- a/app/views/posts.html
+++ b/app/views/posts.html
@@ -1,11 +1,11 @@
 <div class="container posts-page">
- 
+
   <div class="post row" ng-repeat="(postId, post) in posts">
     <div class="col-xs-1">
- 
+
     </div>
     <div class="col-md-9 col-xs-11">
- 
+
       <div class="info">
         <a href="{{ post.url }}">
           {{ post.title }}
@@ -13,14 +13,14 @@
         </a>
       </div>
       <div>
+        <span>submitted by <a href="#/users/{{ post.owner }}">{{ post.owner }}</a></span>
+        -
         <a href="#/posts/{{ postId }}">comments</a>
-        <a ng-click="deletePost(postId)">delete</a>
+        <a ng-click="deletePost(postId)" ng-show="signedIn() && post.owner === currentUser.username">delete</a>
       </div>
     </div>
     <div class="col-md-2">
-      
+
     </div>
- 
   </div>
- 
 </div>
