--- a/app/views/showpost.html
+++ b/app/views/showpost.html
@@ -26,7 +26,10 @@
   <div ng-repeat="(commentId, comment) in post.comments" class="row cmt">
     <div class="col-md-12">
       <p>{{ comment.text }}</p>
-      <p class="author">posted by <a herf="#/users/{{ comment.username}}">{{ comment.username }}</a></p>
+      <p class="author">posted by <a href="#/users/{{ comment.username }}">{{ comment.username }}</a>
+        <a ng-click="removeComment(comment, commentId)"
+           ng-show="signedIn() && comment.username === currentUser.username">( delete )</a>
+      </p>
     </div>
   </div>
 
