--- a/app/views/showpost.html
+++ b/app/views/showpost.html
@@ -2,9 +2,9 @@
 
   <div class="post row">
     <div class="col-xs-1">
-      <div class="vote up"><span ng-hide="downVoted(post)" ng-click="upVotePost(postId, upVoted(post))">&#x25B2;</span></div>
+      <div class="vote up"><span ng-hide="downVoted()" ng-click="upVotePost(upVoted())">&#x25B2;</span></div>
 
-      <div class="vote down"><span ng-hide="upVoted(post)" ng-click="downVotePost(postId, downVoted(post))">&#x25BC;</span></div>
+      <div class="vote down"><span ng-hide="upVoted()" ng-click="downVotePost(downVoted())">&#x25BC;</span></div>
     </div>
     <div class="col-md-9 col-xs-11">
 
@@ -16,6 +16,8 @@
         </a>
       </div>
       <div>
+        <span>{{ post.score || 0 }} votes</span>
+        -
         <span>submitted by <a href="#/users/{{ post.owner }}">{{ post.owner }}</a></span>
       </div>
     </div>
